# mcp-syzkaller

./: .gitignore  Makefile  README.md  main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  mcp_server.py  pyproject.toml
agent/: agent.py  mcp_agent.config.yaml  user_input.py
demo/: finder_agent.py  mcp_agent.config.yaml
prompts/: prompt_crash_review.txt  prompt_update_syzlang.txt
