[project]
name = "mcp-syzkaller"
version = "0.1.0"
description = "MCP agent for the syzkaller"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Sabyrzhan Tasbolatov", email = "snovitoll@gmail.com"},
]

dependencies = [
    "ipdb>=0.13.13",
    "mcp>=1.9.1",
    "mcp-agent>=0.0.23",
]
